@@ -5,7 +5,6 @@ export(doc_temp)
 export(folder)
 export(GQ)
 export(html5)
-export(install_pandoc)
 export(LL)
 export(new_report)
 export(pad)
