@@ -41,11 +41,11 @@
   Must contain: doc.docx} } } Additional project files and
   directories can be stored in the \code{inst} directory.
   Files in this directory will be placed in the main
-  directoy of the templace created by
+  directory of the template created by
   \code{\link[reports]{new_report}}
 
-  To be submitted a .tex template must run in Debian
-  TeXLive on Linux Mint and MikTex on Windows.  After a
+  To be submitted a .tex template must run in Debian TeX
+  Live on Linux Mint and MiKTex on Windows.  After a
   template has been tested it can be sent as a .zip file to
   \code{reports.rpackage@gmail.com}.  Please note that the
   template folder/directory name must end in _tex, _rnw,
