@@ -14,8 +14,8 @@
   Default, \code{NULL}, uses the root name of the
   \code{in.file} plus a number 2.}
 
-  \item{type}{A character string of the desired slidie
-  type; either c(\code{"slidy"} or \code{"dzslides"}).}
+  \item{type}{A character string of the desired slide type;
+  either c(\code{"slidy"} or \code{"dzslides"}).}
 
   \item{ref.page}{The title of the reference page (adds
   hanging indent and reduces font size).  If \code{NULL}
@@ -49,7 +49,7 @@
 \section{Code Chunks}{
   The following convenience code chunks are implemented:
   \enumerate{ \item{\bold{hi} - Wrapping text with this
-  code chunk will result in hanginging indentation.  Use
+  code chunk will result in hanging indentation.  Use
   \code{hi.cex} to control the font size of the text.}
   \item{\bold{yt} - Wrap a youtube url or tag to embed a
   youtube video} } Code chunks use the following form:
@@ -64,7 +64,7 @@
 \examples{
 \dontrun{
 #Run after running knitr on an Rmd file
-dzslides()  #assumes location of html file out of the box
+html5()  #assumes location of html file out of the box
 }
 }
 \author{
